# bpf

./: .bazelrc  .gitignore  Makefile  README.md  Vagrantfile  WORKSPACE  deps.bzl  vars.mk
.github/workflows/: main.yml
readline/: BUILD.bazel  go.mod
readline/cmd/: BUILD.bazel  main.go
scripts/: install-bcc.sh
